# cli-candlestick-chart

./: Cargo.toml  README.md
src/: BTCGBP-1d-2022-07-06.csv  main.rs
