[package]
name = "candlesticks"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Mbugua <andrewmbugua388@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#cdzylib - dynamic system library
#[lib]
#crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
cli-candlestick-chart = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
technical_indicators = "0.5.0"
